--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {font-family: "Lato", sans-serif}
 <!-- Navigation bar with social media icons -->
 <div class="w3-bar w3-top w3-black w3-hide-small w3-padding w3-opacity-min w3-hover-opacity-off">
   <a href="https://facebook.com/groups/844550552658811/" class="w3-bar-item w3-button"><i class="fa fa-facebook-official" style='font-size:28px;color:blue'></i></a>
-  <a href="https://discord.com/invite/fzqte6" class="w3-bar-item w3-button"><i class="fab fa-discord" style='font-size:28px;color:purple'></i></a>
+  <a href="https://discord.gg/" class="w3-bar-item w3-button"><i class="fab fa-discord" style='font-size:28px;color:purple'></i></a>
   <span class="w3-button w3-small w3-black w3-right" onclick="w3_open()"><i class="fa fa-bars" style='font-size:28px;color:white'></i></span>
   <p class="pascal">Sunrise</p>
   
