--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body {font-family: "Lato", sans-serif}
   </a>
   <div class="w3-bar-block w3-center">
   <a href="#Home" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Home</a>
-    <a href="https://us02web.zoom.us/w/87316869114?tk=kIpcTp11c53OALxfKZfkHREvPmeMYLTEpnDNQAU2yhA.DQIAAAAUVH2v-hY2b2NWXzVzTVFFSzR1aEhVVEM1UEh3AAAAAAAAAAAAAAAAAAAAAAAAAAAA" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Join Class</a>
+    <a href="https://us02web.zoom.us/w/87316869114?tk=kIpcTp11c53OALxfKZfkHREvPmeMYLTEpnDNQAU2yhA.DQIAAAAUVH2v-hY2b2NWXzVzTVFFSzR1aEhVVEM1UEh3AAAAAAAAAAAAAAAAAAAAAAAAAAAA&pwd=b1RMYVVnM2pHM1RsbnQyeExVa3BXUT09" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Join Class</a>
     <a href="#Information" class="w3-bar-item w3-button w3-text-grey w3-hover-black">Information</a>
     
   </div>
